hphp/hack/test/typecheck/shape_idx_dependent.php.like_types.exp
File "shape_idx_dependent.php", line 8, characters 24-25:
Invalid argument (Typing[4110])
File "shape_idx_dependent.php", line 8, characters 24-25:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_dependent.php", line 7, characters 24-30:
But got this::T
